<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#000"
    tools:context=".PlayScreen" >
    
        <!--  android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->

    <TextView
        android:id="@+id/SurvivalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_weight="3"
        android:text="@string/survival"
        android:textColor="@color/TextColorG"
        android:textSize="@dimen/Title" />

    <Button
        android:id="@+id/Survival0"
        style="@style/GUIButton"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:layout_weight="1"
        android:text="@string/play" />

    <Button
        android:id="@+id/Survival1"
        style="@style/GUIButton"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:layout_weight="1"
        android:text="@string/leaderboards" />

      <Button
          android:id="@+id/SurvivalBack"
          style="@style/back_button"
          android:layout_width="70dp"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          android:layout_marginLeft="21dp"
          android:layout_marginTop="21dp" />

      <View
        android:layout_width="1dp"
        android:layout_height="0dip"
        android:layout_weight="3">
    </View>

</LinearLayout>